[ADD] Menambahkan landing page
